fix bug #39760 (cloning fails on nested SimpleXML-Object) add test